# koraku-cloud

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.Jules/: palette.md
.jules/: bolt.md  palette.md  sentinel.md
canvases/: codebase-audit.canvas.tsx
docs/: DATA_LIFECYCLE.md  MIGRATION_SDK_CLOUD.md  OVERVIEW.md  PACKAGING.md  PRODUCT.md  PUBLIC_BETA_RUNBOOK.md  ROADMAP.md  SDK.md  SELF_HOST.md  SENDBLUE.md
examples/: embed_python.py
koraku/: __init__.py  cli.py  inert_cloud_settings.py  profiles.py  sdk.py  server.py  server_core.py  server_sdk.py
koraku_cloud/: __init__.py  app.py  bootstrap.py  cloud_settings.py  product_hooks.py  pyproject.toml
koraku_cloud/api/: admin_auth.py  admin_routes.py  auth_scope.py  automation_events_routes.py  automations_routes.py  composio_trigger_events_routes.py  detached_runs.py  memory_routes.py  personalization_routes.py  profile_routes.py  sendblue_routes.py  skills_routes.py  workspace_routes.py
koraku_cloud/automations/: __init__.py  agent_tools.py  async_ops.py  composio_triggers.py  cron_next.py  fingerprint.py  imessage_notify.py  present.py  progress.py  run_context.py  runner.py  schedule.py  scheduler.py  skip_rules.py  supabase_store.py  validation.py  webhook_guard.py  webhook_tokens.py
koraku_cloud/integrations/: composio_webhooks.py  profile_enrichment.py  supabase_admin.py  supabase_chat_history.py  supabase_external.py  supabase_personalization.py  supabase_rest.py  supabase_skills.py  supabase_tenant.py
koraku_cloud/tools/: imessage_send_tool.py
scripts/: README.md  check_cloud_imports.py  cleanup-extra-venvs.sh  deploy-vps.sh  export-sdk-oss-repo.sh  install-monorepo.sh  install-web.sh  ngrok-sendblue.sh  oss-repo-post-export.py  run-api.sh  verify-sdk-wheel.sh
tests/: conftest.py  test_agent_budget.py  test_agent_prompt_builder.py  test_agent_runtime_context.py  test_artifacts.py  test_attachment_extract.py  test_auth.py  test_automation_run_context.py  test_automation_supabase_ids.py  test_automation_webhook_guard.py  test_binary_read_paths.py  test_blaxel_artifact_deps.py  test_blaxel_cache.py  test_blaxel_cloud_gate.py  test_blaxel_dispatch_paths.py  test_blaxel_lazy.py  test_blaxel_lock_eviction.py  test_brain_graph.py  test_canonical.py  test_chat_latency.py  test_chat_models_auth.py  test_chat_sessions.py  test_cloud_agent_scale.py  test_cloud_auth_scope.py  test_cloud_skills_loader.py  test_composio_curated_toolkits.py  (+61 more)
(+435 files in other folders)
