[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "koraku-cloud"
version = "0.2.0"
description = "Koraku Cloud product APIs (Supabase, automations, workspace)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
# Monorepo: install sibling SDK first (`pip install -e ".[all]"` from repo root).
# After koraku is on PyPI, use optional extra: pip install "koraku-cloud[pypi]"
dependencies = []

[project.optional-dependencies]
pypi = ["koraku[server,all]>=0.2.0"]

[project.urls]
Repository = "https://github.com/meet447/koraku-cloud"

[tool.setuptools.packages.find]
where = [".."]
include = ["koraku_cloud*"]
